[package]
authors = ['GalacticCouncil']
edition = '2018'
homepage = 'https://github.com/galacticcouncil/Basilisk-node'
license = 'Apache 2.0'
name = 'basilisk-runtime'
repository = 'https://github.com/galacticcouncil/Basilisk-node'
version = '13.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'
substrate-wasm-builder = '4.0.0'

[dependencies]
hex-literal = { version = '0.3.1' }
tracing-core = { optional = true, version = '0.1.17' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hash-db = { version = "0.15.2", default-features = false }
memory-db = { version = "0.26.0", default-features = false }
trie-db = { version = "0.22.0", default-features = false }
smallvec = "1.6.1"

# local dependencies
pallet-transaction-multi-payment = {path = "../pallets/transaction-multi-payment", default-features = false}
pallet-multi-payment-benchmarking = { path = "../pallets/transaction-multi-payment/benchmarking", optional=true, default-features= false}
pallet-exchange = {path = "../pallets/exchange", default-features=false}
pallet-exchange-benchmarking = { path = "../pallets/exchange/benchmarking", optional=true, default-features=false}
pallet-asset-registry = {path = "../pallets/asset-registry",default-features=false}
pallet-xyk = { path = "../pallets/xyk",default-features=false}
pallet-xyk-rpc-runtime-api = {path = "../pallets/xyk/rpc/runtime-api",default-features=false}
pallet-nft = { path = '../pallets/nft', default-features = false }
pallet-lbp = { path = '../pallets/lbp', default-features = false }

primitives = { default-features = false, path = "../primitives" }

pallet-treasury = { version = "3.0.0", default-features = false }
pallet-democracy = { version = "3.0.0", default-features = false }
pallet-scheduler = { version = "3.0.0", default-features = false }
pallet-elections-phragmen = {default-features = false, version = '4.0.0'}
pallet-tips = {default-features = false, version = '=3.0.0'}

# collator support
pallet-collator-selection = { default-features=false, version="3.0.0" }
pallet-authorship = { default-features = false, version="3.0.0"}

# ORML dependencies
orml-currencies = { default-features = false, version = "0.4.1-dev" }
orml-nft = { default-features = false, version = '0.4.0' }
orml-tokens = { default-features = false, version = "0.4.1-dev" }
#orml-unknown-tokens = { default-features = false, version = "0.4.1-dev" }
orml-traits = { default-features = false, version = "0.4.1-dev" }
orml-vesting = { default-features = false, version = "0.4.1-dev" }
#orml-xtokens = { default-features = false, version = "0.4.1-dev" }
#orml-xcm-support = { default-features = false, version = "0.4.1-dev" }

# Cumulus dependencies
cumulus-pallet-aura-ext = { version = "0.1.0", default-features = false}
cumulus-pallet-parachain-system ={ version = "0.1.0", default-features = false}
cumulus-primitives-core ={ version = "0.1.0", default-features = false}
cumulus-primitives-parachain-inherent ={ version = "0.1.0", default-features = false}
cumulus-primitives-timestamp ={ version = "0.1.0", default-features = false}
parachain-info = { version = "0.1.0", default-features = false}

# Polkadot dependencies
polkadot-parachain = { version = "0.9.5", default-features = false, features = ["wasm-api"]}
#xcm = { default-features = false }
#xcm-builder = { default-features = false }
#xcm-executor = { default-features = false }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-collective = { default-features = false, version= '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-session = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-utility = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-externalities = { default-features = false, version = '0.9.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }
sp-staking = { default-features = false, version = '3.0.0' }
sp-trie = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-multi-payment-benchmarking',
    'pallet-nft/runtime-benchmarks',
    "pallet-xyk/runtime-benchmarks",
    "pallet-exchange-benchmarking",
    "pallet-lbp/runtime-benchmarks",
    'sp-runtime/runtime-benchmarks',
    'pallet-collator-selection/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std',
    'orml-vesting/std',
    #"orml-xtokens/std",
    #"orml-xcm-support/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-aura-ext/std",
    #"cumulus-pallet-xcm/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-parachain-inherent/std",
    #"xcm/std",
    #"xcm-builder/std",
    #"xcm-executor/std",
    'orml-nft/std',
    'parachain-info/std',
    'pallet-xyk/std',
    'pallet-xyk-rpc-runtime-api/std',
    'pallet-asset-registry/std',
    'pallet-exchange/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-elections-phragmen/std',
    'pallet-grandpa/std',
    'pallet-nft/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    "pallet-transaction-multi-payment/std",
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-lbp/std',
    'pallet-utility/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-externalities/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'pallet-treasury/std',
    'pallet-collective/std',
    'pallet-democracy/std',
    'pallet-scheduler/std',
      'pallet-tips/std',
    'pallet-collator-selection/std',
    'pallet-authorship/std',
]
